crates/guatiao/include/guatiao.h

typedef enum guatiao_status guatiao_status;
typedef uint32_t guatiao_status;
/*
 Borrowed UTF-8 text: a pointer and a length, no NUL terminator.

 **Check `len` before `ptr`**: an empty view may carry a dangling or
 null pointer.
 */
typedef struct guatiao_str {
  /*
   First byte. May be null or dangling when `len` is 0.
   */
  const uint8_t *ptr;
  /*
   Length in bytes.
   */
  size_t len;
} guatiao_str;
/*
 An allocator, as a vtable a foreign caller can fill in.

 Every field after `struct_size` is read only when `struct_size` says it
 is there, so fields may be **appended** without breaking a caller
 compiled against an older copy.
 */
typedef struct guatiao_alloc {
  /*
   `sizeof(guatiao_alloc)` as the caller compiled it. Always first,
   always set. Zero is refused rather than read charitably.
   */
  uint32_t struct_size;
  /*
   Passed back to every callback below. Opaque to this crate.
   */
  void *ctx;
  /*
   Required. A null here is refused at the boundary rather than
   called.

   Spelled out rather than written as the type alias above, and that
   is a header-generation constraint rather than a style: through an
   alias, a header generator renders this field as an opaque struct
   used by value, which is an incomplete type and compiles nowhere.
   */
  void *(*alloc)(void *ctx, size_t size, size_t align);
  /*
   Required. A null here is refused at the boundary rather than
   called. Spelled out for the reason given on `alloc`.
   */
  void (*free)(void *ctx, void *ptr, size_t size, size_t align);
  /*
   Optional, and the newest field. A caller compiled before it existed
   declares a smaller `struct_size` and it reads as absent — never as
   whatever bytes happened to follow that caller's allocation.
   */
  void (*release)(void *ctx);
} guatiao_alloc;
/*
 The payload of a value. The tag decides which arm is live, and
 nothing else does.

 Reading a 32-byte arm off the wrong tag is garbage but defined; all
 four are structs of pointers and integers. Reading the `b` arm off the
 wrong tag is **undefined**, and so is reading any wide arm off a
 payload written as `{ b: true }` alone. One rule prevents both:
 **every node is born with all 40 bytes initialised**.

 The arms are `ManuallyDrop` because a union field must be `Copy` or
 wrapped, and an allocator-carrying container that was `Copy` would
 invite a silent double free. A header generator erases the wrapper.
 */
typedef union guatiao_payload {
  /*
   Live when the tag is `GUATIAO_BOOL`. Zero is false, **any**
   non-zero byte is true.

   A byte, not a `bool`: a `bool` must be 0 or 1, so any other byte
   would be undefined to read at that type, at the read, before a
   check could reject it — and a producer can write one without
   trying. `u8` has no invalid bit patterns, so the hazard does not
   exist rather than being defended against. `.b = true` still
   stores 1.
   */
  uint8_t b;
  /*
   Live when the tag is `GUATIAO_STRING` **or** `GUATIAO_NUMBER`.
   */
  struct guatiao_string text;
  /*
   Live when the tag is `GUATIAO_BYTES`.
   */
  struct guatiao_buffer bytes;
  /*
   Live when the tag is `GUATIAO_LIST`.
   */
  struct guatiao_list list;
  /*
   Live when the tag is `GUATIAO_MAP`.
   */
  struct guatiao_map map;
} guatiao_payload;
/*
 One value: a tag and its payload.

 Read the tag first, then the arm it selects. A tag this build does not
 recognise means skip this one value and carry on; it never means stop.
 */
typedef struct guatiao_value {
  /*
   One of the `GUATIAO_*` tag constants.
   */
  uint32_t tag;
  /*
   Reserved. Always zero, so a node is byte-comparable and a C
   caller has a named field to initialise.
   */
  uint32_t _pad;
  /*
   The payload the tag selects.
   */
  union guatiao_payload payload;
} guatiao_value;
/*
 One per-path mode override: what the *declarer* of an option knows
 that whoever merges two maps does not.
 */
typedef struct guatiao_merge_override {
  /*
   The dotted path this governs, matched exactly.
   */
  struct guatiao_str path;
  /*
   One of the `GUATIAO_MERGE_*` mode constants.
   */
  uint32_t mode;
} guatiao_merge_override;
/*
 Borrowed bytes: any content at all, NULs included.

 Same shape and check-the-length rule as `guatiao_str`, and a separate
 type because "text" and "arbitrary bytes" are different promises.
 */
typedef struct guatiao_bytes {
  /*
   First byte. May be null or dangling when `len` is 0.
   */
  const uint8_t *ptr;
  /*
   Length in bytes.
   */
  size_t len;
} guatiao_bytes;
/*
 Merges `later` into `earlier`, later winning, and writes a new tree
 through `out`.

 Neither input is touched. The result is built entirely through
 `alloc`, which is also the allocator it frees through, so the caller
 releases it with `guatiao_value_free` and nothing else.

 `overrides` may be null when `overrides_len` is zero. `out_error` may
 be null, and receives a map describing the disagreement when the merge
 fails on one.

 Both `out` and a non-null `out_error` are written the absent marker on
 entry, so a failed call leaves each ABSENT rather than untouched — a
 caller that reads one back after a failure reads what the call
 produced, not what its own local happened to contain.

 A null or unusable allocator is `GUATIAO_ERR_ALLOC`.

 # Safety

 Every non-null pointer addresses what its type says, `out` addresses
 writable storage for one value that does not already hold one the
 caller still owns, and `overrides` addresses `overrides_len` entries.
 */
guatiao_status guatiao_merge(uint32_t mode,
                             const struct guatiao_value *earlier,
                             const struct guatiao_value *later,
                             const struct guatiao_alloc *alloc,
                             uint32_t options,
                             const struct guatiao_merge_override *overrides,
                             size_t overrides_len,
                             struct guatiao_value *out,
                             struct guatiao_value *out_error);
/*
 Stores `value` under `key`, **moving** it and leaving it null-tagged.

 Replaces any existing entry in place, keeping its position. To store
 something you only borrowed, call `guatiao_value_clone` first and pass
 the copy: there is no copying variant, so the cost is always a line you
 can see.

 **`node` and `value` must not overlap**, and the same pointer for both
 is `GUATIAO_ERR_BAD_VALUE`: this moves the 40 bytes at `value` into
 `node`, which cannot be a slot inside the tree it is moving. A null or
 unusable allocator is `GUATIAO_ERR_ALLOC`.

 # Safety

 The pointers are null or valid, the key's bytes are readable, and
 `value` does not address a node inside `node`.
 */
guatiao_status guatiao_map_set(const struct guatiao_alloc *alloc,
                               struct guatiao_value *node,
                               struct guatiao_str key,
                               struct guatiao_value *value);
/*
 Removes `key` and frees its value. `GUATIAO_ERR_NOT_FOUND` if absent.

 # Safety

 The pointers are null or valid, and the key's bytes are readable.
 */
guatiao_status guatiao_map_discard(struct guatiao_value *node, struct guatiao_str key);
/*
 Frees every entry and empties the map, keeping its capacity.

 # Safety

 `node` is null or a well-formed map.
 */
guatiao_status guatiao_map_clear(struct guatiao_value *node);
/*
 Copies every entry of `src` into `dst`, replacing collisions.

 **Use this before rebuilding a record**, or every field you do not
 model is dropped on write-back.

 **`dst` and `src` must not overlap**, and the same pointer for both is
 `GUATIAO_ERR_BAD_VALUE`. `src` may be a node stored inside `dst`: the
 source is copied whole before `dst` is touched. A null or unusable
 allocator is `GUATIAO_ERR_ALLOC`.

 Not atomic: a failure part-way leaves the entries already copied in
 place.

 # Safety

 The pointers are null or valid.
 */
guatiao_status guatiao_map_copy_from(const struct guatiao_alloc *alloc,
                                     struct guatiao_value *dst,
                                     const struct guatiao_value *src);
/*
 Appends `value`, **moving** it and leaving it null-tagged.

 To append something you only borrowed, call `guatiao_value_clone`
 first and pass the copy.

 **`node` and `value` must not overlap**, and the same pointer for both
 is `GUATIAO_ERR_BAD_VALUE`, as for `guatiao_map_set`. A null or
 unusable allocator is `GUATIAO_ERR_ALLOC`.

 # Safety

 The pointers are null or valid, and `value` does not address a node
 inside `node`.
 */
guatiao_status guatiao_list_push(const struct guatiao_alloc *alloc,
                                 struct guatiao_value *node,
                                 struct guatiao_value *value);
/*
 Removes and frees the element at `index`.

 # Safety

 `node` is null or a well-formed list.
 */
guatiao_status guatiao_list_discard(struct guatiao_value *node, size_t index);
/*
 Frees every element and empties the list, keeping its capacity.

 # Safety

 `node` is null or a well-formed list.
 */
guatiao_status guatiao_list_clear(struct guatiao_value *node);
/*
 Appends to a bytes value.

 `bytes` may view the node's own buffer, as in `guatiao_string_push`. A
 null or unusable allocator is `GUATIAO_ERR_ALLOC`.

 # Safety

 The pointers are null or valid and the view's bytes are readable.
 */
guatiao_status guatiao_buffer_push(const struct guatiao_alloc *alloc,
                                   struct guatiao_value *node,
                                   struct guatiao_bytes bytes);
/*
 The allocator over Rust's global allocator, for a C caller that has no
 reason to supply its own.

 Writes it through `out`. The caller keeps the struct alive for as long
 as any tree built through it: containers hold a pointer to it.

 # Safety

 `out` addresses writable storage for one allocator.
 */
guatiao_status guatiao_alloc_default(struct guatiao_alloc *out);