crates/guatiao-form/include/guatiao_form.h

/*
 Whether `form` fits `schema`.

 `GUATIAO_ERR_BAD_VALUE` when it does not, and `out_error` — which may be
 null — receives a map: `kind` (`malformed`, `unknown_field`,
 `duplicate_section`, `condition_refused` or `cyclic_condition`), `at`,
 whichever of `path`, `id`, `field` and `expected` apply, and a
 `message`. It never carries a value the form compares with.

 `GUATIAO_ERR_ALLOC` when `out_error` was asked for and `alloc` cannot
 build it: the verdict is known, and the allocator is what to fix
 first. Pass a null `out_error` for the verdict alone.

 # Safety

 Every non-null pointer addresses what its type says, and `out_error`
 addresses writable storage for one value.
 */
guatiao_status guatiao_form_check(const guatiao_value *schema,
                                  const guatiao_value *form,
                                  const guatiao_alloc *alloc,
                                  guatiao_value *out_error);
/*
 The schema's fields grouped into sections and put in order.

 Writes a list of `{ "section": <map or null>, "fields": [key, …] }` to
 `out`, built through `alloc` and freed with `guatiao_value_free`. The
 rules are `guatiao_form::layout`'s: declared sections in order, the
 default section first unless the form places it, explicit `x-order`
 ahead of declaration order, empty groups left out.

 # Safety

 Every non-null pointer addresses what its type says, and `out`
 addresses writable storage for one value.
 */
guatiao_status guatiao_form_layout(const guatiao_value *schema,
                                   const guatiao_value *form,
                                   const guatiao_alloc *alloc,
                                   guatiao_value *out);
/*
 Whether the field under `key` is shown, given the `values` entered so
 far. Writes the answer through `out`.

 The rules are `guatiao_form::is_visible`'s: no condition is shown; a
 condition is met when the field it reads is itself shown and holds the
 value; a field holding nothing reads as its schema default.

 `GUATIAO_ERR_NOT_FOUND` when `key` -- or a key a condition reads --
 names no field the schema declares, and `out` is then not written.

 # Safety

 Every non-null pointer addresses what its type says, `key` is a readable
 view, and `out` addresses writable storage for one `bool`.
 */
guatiao_status guatiao_form_is_visible(const guatiao_value *schema,
                                       const guatiao_value *form,
                                       guatiao_str key,
                                       const guatiao_value *values,
                                       bool *out);