crates/guatiao-serde/include/guatiao_serde.h

/*
 Reads a JSON document into a value, built through `alloc`.

 # Safety

 `text` is a readable view for this call, `alloc` is null or a complete
 allocator outliving every tree built through it, and `out` addresses
 writable storage for one value whose previous contents are the
 caller's to have freed.
 */
guatiao_status guatiao_json_parse(guatiao_str text,
                                  uint32_t how,
                                  const guatiao_alloc *alloc,
                                  guatiao_value *out);
/*
 Writes a value as a JSON document.

 **`out` receives a value holding the text**, released with
 `guatiao_value_free` like any other tree — so there is no second thing
 to free and no second way to get it wrong.

 # Safety

 `value` addresses a well-formed value, `alloc` is null or a complete
 allocator, and `out` addresses writable storage for one value whose
 previous contents are the caller's to have freed.
 */
guatiao_status guatiao_json_emit(const guatiao_value *value,
                                 uint32_t how,
                                 const guatiao_alloc *alloc,
                                 guatiao_value *out);
/*
 The same, indented for a person to read.

 Its own function rather than a flag, because JSON is the only format
 here with two spellings — the others are already written for a reader.

 # Safety

 As [`guatiao_json_emit`].
 */
guatiao_status guatiao_json_emit_pretty(const guatiao_value *value,
                                        uint32_t how,
                                        const guatiao_alloc *alloc,
                                        guatiao_value *out);