bindings/dart/lib/src/bindings.g.dart

// This Source Code Form is subject to the terms of the Mozilla Public
// License, v. 2.0. If a copy of the MPL was not distributed with this
// file, You can obtain one at https://mozilla.org/MPL/2.0/.
//
// GENERATED by ffigen. Do not edit: run `dart run ffigen` instead.

// ignore_for_file: always_specify_types, camel_case_types
// ignore_for_file: non_constant_identifier_names, unused_field

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import, unused_element, deprecated_member_use_from_same_package
import 'dart:ffi' as ffi;

/// Raw dart:ffi bindings over the guatiao C ABI, generated from crates/guatiao/include/guatiao.h and the sibling headers for the serde and form libraries.
class GuatiaoBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  GuatiaoBindings(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  GuatiaoBindings.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  int guatiao_alloc_default(
    ffi.Pointer<guatiao_alloc> out,
  ) {
    return _guatiao_alloc_default(
      out,
    );
  }

  late final _guatiao_alloc_defaultPtr = _lookup<
      ffi.NativeFunction<
          guatiao_status$1 Function(
              ffi.Pointer<guatiao_alloc>)>>('guatiao_alloc_default');
  late final _guatiao_alloc_default = _guatiao_alloc_defaultPtr
      .asFunction<int Function(ffi.Pointer<guatiao_alloc>)>();

  int guatiao_buffer_push(
    ffi.Pointer<guatiao_alloc> alloc,
    ffi.Pointer<guatiao_value> node,
    guatiao_bytes bytes,
  ) {
    return _guatiao_buffer_push(
      alloc,
      node,
      bytes,
    );
  }

  late final _guatiao_buffer_pushPtr = _lookup<
      ffi.NativeFunction<
          guatiao_status$1 Function(
              ffi.Pointer<guatiao_alloc>,
              ffi.Pointer<guatiao_value>,
              guatiao_bytes)>>('guatiao_buffer_push');
  late final _guatiao_buffer_push = _guatiao_buffer_pushPtr.asFunction<
      int Function(ffi.Pointer<guatiao_alloc>, ffi.Pointer<guatiao_value>,
          guatiao_bytes)>();

  int guatiao_form_check(
    ffi.Pointer<guatiao_value> schema,
    ffi.Pointer<guatiao_value> form,
    ffi.Pointer<guatiao_alloc> alloc,
    ffi.Pointer<guatiao_value> out_error,
  ) {
    return _guatiao_form_check(
      schema,
      form,
      alloc,
      out_error,
    );
  }

  late final _guatiao_form_checkPtr = _lookup<
      ffi.NativeFunction<
          guatiao_status$1 Function(
              ffi.Pointer<guatiao_value>,
              ffi.Pointer<guatiao_value>,
              ffi.Pointer<guatiao_alloc>,
              ffi.Pointer<guatiao_value>)>>('guatiao_form_check');
  late final _guatiao_form_check = _guatiao_form_checkPtr.asFunction<
      int Function(ffi.Pointer<guatiao_value>, ffi.Pointer<guatiao_value>,
          ffi.Pointer<guatiao_alloc>, ffi.Pointer<guatiao_value>)>();

  int guatiao_form_is_visible(
    ffi.Pointer<guatiao_value> schema,
    ffi.Pointer<guatiao_value> form,
    guatiao_str key,
    ffi.Pointer<guatiao_value> values,
    ffi.Pointer<ffi.Bool> out,
  ) {
    return _guatiao_form_is_visible(
      schema,
      form,
      key,
      values,
      out,
    );
  }

  late final _guatiao_form_is_visiblePtr = _lookup<
      ffi.NativeFunction<
          guatiao_status$1 Function(
              ffi.Pointer<guatiao_value>,
              ffi.Pointer<guatiao_value>,
              guatiao_str,
              ffi.Pointer<guatiao_value>,
              ffi.Pointer<ffi.Bool>)>>('guatiao_form_is_visible');
  late final _guatiao_form_is_visible = _guatiao_form_is_visiblePtr.asFunction<
      int Function(ffi.Pointer<guatiao_value>, ffi.Pointer<guatiao_value>,
          guatiao_str, ffi.Pointer<guatiao_value>, ffi.Pointer<ffi.Bool>)>();

  int guatiao_form_layout(
    ffi.Pointer<guatiao_value> schema,
    ffi.Pointer<guatiao_value> form,
    ffi.Pointer<guatiao_alloc> alloc,
    ffi.Pointer<guatiao_value> out,
  ) {
    return _guatiao_form_layout(
      schema,
      form,
      alloc,
      out,
    );
  }

  late final _guatiao_form_layoutPtr = _lookup<
      ffi.NativeFunction<
          guatiao_status$1 Function(
              ffi.Pointer<guatiao_value>,
              ffi.Pointer<guatiao_value>,
              ffi.Pointer<guatiao_alloc>,
              ffi.Pointer<guatiao_value>)>>('guatiao_form_layout');
  late final _guatiao_form_layout = _guatiao_form_layoutPtr.asFunction<
      int Function(ffi.Pointer<guatiao_value>, ffi.Pointer<guatiao_value>,
          ffi.Pointer<guatiao_alloc>, ffi.Pointer<guatiao_value>)>();

  int guatiao_json_emit(
    ffi.Pointer<guatiao_value> value,
    int how,
    ffi.Pointer<guatiao_alloc> alloc,
    ffi.Pointer<guatiao_value> out,
  ) {
    return _guatiao_json_emit(
      value,
      how,
      alloc,
      out,
    );
  }

  late final _guatiao_json_emitPtr = _lookup<
      ffi.NativeFunction<
          guatiao_status$1 Function(
              ffi.Pointer<guatiao_value>,
              ffi.Uint32,
              ffi.Pointer<guatiao_alloc>,
              ffi.Pointer<guatiao_value>)>>('guatiao_json_emit');
  late final _guatiao_json_emit = _guatiao_json_emitPtr.asFunction<
      int Function(ffi.Pointer<guatiao_value>, int, ffi.Pointer<guatiao_alloc>,
          ffi.Pointer<guatiao_value>)>();

  int guatiao_json_emit_pretty(
    ffi.Pointer<guatiao_value> value,
    int how,
    ffi.Pointer<guatiao_alloc> alloc,
    ffi.Pointer<guatiao_value> out,
  ) {
    return _guatiao_json_emit_pretty(
      value,
      how,
      alloc,
      out,
    );
  }

  late final _guatiao_json_emit_prettyPtr = _lookup<
      ffi.NativeFunction<
          guatiao_status$1 Function(
              ffi.Pointer<guatiao_value>,
              ffi.Uint32,
              ffi.Pointer<guatiao_alloc>,
              ffi.Pointer<guatiao_value>)>>('guatiao_json_emit_pretty');
  late final _guatiao_json_emit_pretty =
      _guatiao_json_emit_prettyPtr.asFunction<
          int Function(ffi.Pointer<guatiao_value>, int,
              ffi.Pointer<guatiao_alloc>, ffi.Pointer<guatiao_value>)>();

  int guatiao_json_parse(
    guatiao_str text,
    int how,
    ffi.Pointer<guatiao_alloc> alloc,
    ffi.Pointer<guatiao_value> out,
  ) {
    return _guatiao_json_parse(
      text,
      how,
      alloc,
      out,
    );
  }

  late final _guatiao_json_parsePtr = _lookup<
      ffi.NativeFunction<
          guatiao_status$1 Function(
              guatiao_str,
              ffi.Uint32,
              ffi.Pointer<guatiao_alloc>,
              ffi.Pointer<guatiao_value>)>>('guatiao_json_parse');
  late final _guatiao_json_parse = _guatiao_json_parsePtr.asFunction<
      int Function(guatiao_str, int, ffi.Pointer<guatiao_alloc>,
          ffi.Pointer<guatiao_value>)>();

  int guatiao_list_clear(
    ffi.Pointer<guatiao_value> node,
  ) {
    return _guatiao_list_clear(
      node,
    );
  }

  late final _guatiao_list_clearPtr = _lookup<
      ffi.NativeFunction<
          guatiao_status$1 Function(
              ffi.Pointer<guatiao_value>)>>('guatiao_list_clear');
  late final _guatiao_list_clear = _guatiao_list_clearPtr
      .asFunction<int Function(ffi.Pointer<guatiao_value>)>();

  int guatiao_list_discard(
    ffi.Pointer<guatiao_value> node,
    int index,
  ) {
    return _guatiao_list_discard(
      node,
      index,
    );
  }

  late final _guatiao_list_discardPtr = _lookup<
      ffi.NativeFunction<
          guatiao_status$1 Function(
              ffi.Pointer<guatiao_value>, ffi.Size)>>('guatiao_list_discard');
  late final _guatiao_list_discard = _guatiao_list_discardPtr
      .asFunction<int Function(ffi.Pointer<guatiao_value>, int)>();

  int guatiao_list_push(
    ffi.Pointer<guatiao_alloc> alloc,
    ffi.Pointer<guatiao_value> node,
    ffi.Pointer<guatiao_value> value,
  ) {
    return _guatiao_list_push(
      alloc,
      node,
      value,
    );
  }

  late final _guatiao_list_pushPtr = _lookup<
      ffi.NativeFunction<
          guatiao_status$1 Function(
              ffi.Pointer<guatiao_alloc>,
              ffi.Pointer<guatiao_value>,
              ffi.Pointer<guatiao_value>)>>('guatiao_list_push');
  late final _guatiao_list_push = _guatiao_list_pushPtr.asFunction<
      int Function(ffi.Pointer<guatiao_alloc>, ffi.Pointer<guatiao_value>,
          ffi.Pointer<guatiao_value>)>();

  int guatiao_map_clear(
    ffi.Pointer<guatiao_value> node,
  ) {
    return _guatiao_map_clear(
      node,
    );
  }

  late final _guatiao_map_clearPtr = _lookup<
      ffi.NativeFunction<
          guatiao_status$1 Function(
              ffi.Pointer<guatiao_value>)>>('guatiao_map_clear');
  late final _guatiao_map_clear = _guatiao_map_clearPtr
      .asFunction<int Function(ffi.Pointer<guatiao_value>)>();

  int guatiao_map_copy_from(
    ffi.Pointer<guatiao_alloc> alloc,
    ffi.Pointer<guatiao_value> dst,
    ffi.Pointer<guatiao_value> src,
  ) {
    return _guatiao_map_copy_from(
      alloc,
      dst,
      src,
    );
  }

  late final _guatiao_map_copy_fromPtr = _lookup<
      ffi.NativeFunction<
          guatiao_status$1 Function(
              ffi.Pointer<guatiao_alloc>,
              ffi.Pointer<guatiao_value>,
              ffi.Pointer<guatiao_value>)>>('guatiao_map_copy_from');
  late final _guatiao_map_copy_from = _guatiao_map_copy_fromPtr.asFunction<
      int Function(ffi.Pointer<guatiao_alloc>, ffi.Pointer<guatiao_value>,
          ffi.Pointer<guatiao_value>)>();

  int guatiao_map_discard(
    ffi.Pointer<guatiao_value> node,
    guatiao_str key,
  ) {
    return _guatiao_map_discard(
      node,
      key,
    );
  }

  late final _guatiao_map_discardPtr = _lookup<
      ffi.NativeFunction<
          guatiao_status$1 Function(
              ffi.Pointer<guatiao_value>, guatiao_str)>>('guatiao_map_discard');
  late final _guatiao_map_discard = _guatiao_map_discardPtr
      .asFunction<int Function(ffi.Pointer<guatiao_value>, guatiao_str)>();

  int guatiao_map_set(
    ffi.Pointer<guatiao_alloc> alloc,
    ffi.Pointer<guatiao_value> node,
    guatiao_str key,
    ffi.Pointer<guatiao_value> value,
  ) {
    return _guatiao_map_set(
      alloc,
      node,
      key,
      value,
    );
  }

  late final _guatiao_map_setPtr = _lookup<
      ffi.NativeFunction<
          guatiao_status$1 Function(
              ffi.Pointer<guatiao_alloc>,
              ffi.Pointer<guatiao_value>,
              guatiao_str,
              ffi.Pointer<guatiao_value>)>>('guatiao_map_set');
  late final _guatiao_map_set = _guatiao_map_setPtr.asFunction<
      int Function(ffi.Pointer<guatiao_alloc>, ffi.Pointer<guatiao_value>,
          guatiao_str, ffi.Pointer<guatiao_value>)>();

  int guatiao_merge(
    int mode,
    ffi.Pointer<guatiao_value> earlier,
    ffi.Pointer<guatiao_value> later,
    ffi.Pointer<guatiao_alloc> alloc,
    int options,
    ffi.Pointer<guatiao_merge_override> overrides,
    int overrides_len,
    ffi.Pointer<guatiao_value> out,
    ffi.Pointer<guatiao_value> out_error,
  ) {
    return _guatiao_merge(
      mode,
      earlier,
      later,
      alloc,
      options,
      overrides,
      overrides_len,
      out,
      out_error,
    );
  }
